html pages meta change

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Index</title>
-  <script src="/src/js/main.js" type="module"></script>
-  <link href="/src/sass/main.scss" rel="stylesheet">
+  <script type="module" src="/src/js/main.js"></script>
+  <link rel="stylesheet" href="/src/sass/main.scss">
 </head>
 
 <body>
@@ -15,7 +16,6 @@
   <a href="about.html">About page</a>
   <a href="contact.html">Contact page</a>
   <hr>
-  <!-- todo: make images small size -->
 
   <p>public folder</p>
   <img src="/images/svg/vite.svg" alt="vite">
