root scss file added

--- a/index.html
+++ b/index.html
@@ -1,37 +1,34 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index</title>
+    <script type="module" src="/src/js/main.js"></script>
+    <link rel="stylesheet" href="/src/sass/main.scss" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index</title>
-  <script type="module" src="/src/js/main.js"></script>
-  <link rel="stylesheet" href="/src/sass/main.scss">
-</head>
+  <body>
+    <h1>Index</h1>
+    <a href="about.html">About page</a>
+    <a href="contact.html">Contact page</a>
+    <hr />
 
-<body>
-  <h1>Index</h1>
-  <a href="about.html">About page</a>
-  <a href="contact.html">Contact page</a>
-  <hr>
+    <p>public folder</p>
+    <img src="/images/svg/vite.svg" alt="vite" />
+    <img src="/images/svg/javascript.svg" alt="javascript" />
+    <img src="/images/test_img1_sm.jpg" alt="img1 jpg" />
+    <img src="/images/test_img1_sm.png" alt="img1 png" />
+    <img src="/images/test_img1_sm.webp" alt="img1 webp" />
 
-  <p>public folder</p>
-  <img src="/images/svg/vite.svg" alt="vite">
-  <img src="/images/svg/javascript.svg" alt="javascript">
-  <img src="/images/test_img1_sm.jpg" alt="img1 jpg">
-  <img src="/images/test_img1_sm.png" alt="img1 png">
-  <img src="/images/test_img1_sm.webp" alt="img1 webp">
-
-  <hr>
-  <p>from /src/images folder</p>
-  <img src="/src/images/vite.svg" alt="vite">
-  <img src="/src/images/svg/javascript.svg" alt="javascript">
-  <img src="/src/images/test_img1_sm.jpg" alt="img1 jpg">
-  <img src="/src/images/test_img1_sm.png" alt="img1 png">
-  <img src="/src/images/test_img1_sm.webp" alt="img1 webp">
-
-</body>
-
+    <hr />
+    <p>from /src/images folder</p>
+    <img src="/src/images/vite.svg" alt="vite" />
+    <img src="/src/images/svg/javascript.svg" alt="javascript" />
+    <img src="/src/images/test_img1_sm.jpg" alt="img1 jpg" />
+    <img src="/src/images/test_img1_sm.png" alt="img1 png" />
+    <img src="/src/images/test_img1_sm.webp" alt="img1 webp" />
+  </body>
 </html>
